[workspace]
members = [
    "ios-example/"
]
[package]
name = "uikit-sys"
version = "0.0.1"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = "2021"
keywords = ["ios", "uikit", "bindgen"]
repository = "https://github.com/simlay/uikit-sys"
documentation = "https://simlay.github.io/uikit-sys"
categories = ["gui", "uikit", "ios"]
license = "Apache-2.0"
description = "UIKit bindings for iOS"

[package.metadata.bundle.example.rect]
name = "rect"
identifier = "com.github.simlay.uikit-sys.rect"
category = "Utility"
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""
#icon = ["examples/hello/icon*.png"]


[build-dependencies]
bindgen = { version = "0.59.2", default-features = false}

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"
block = "0.1.6"

[dev-dependencies]
winit = "0.26.0"
log = "0.4"
pretty_env_logger = "0.4"
color-backtrace = "0.6.1"
env_logger = "0.9"

[patch.crates-io]
winit = { git = "https://github.com/rust-windowing/winit" }
bindgen = { git = "https://github.com/simlay/rust-bindgen.git", branch = "objc-category-inheritance" }
