[package]
name = "uikit-sys-example"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = '2018'

[lib]
name = "uikit_sys_example"
crate-type = ["staticlib"]

[dependencies]
# For local development.
block = "*"
objc = "*"
objc_id = "0.1.1"
uikit-sys = { path = "../" }
winit = "0.20.0"
color-backtrace = "0.2.3"
log = "0.4"
pretty_env_logger = "0.3"
env_logger = "0.7"
raw-window-handle = "0.3.3"
