[package]
name = "uikit-sys-test"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian@easypost.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
block = "0.1.6"
objc_id = "0.1.1"
#winit = "0.20.0"
uikit-sys = { path = "../" }
